fix services icons on mobile

--- a/_sass/modules/services.scss
+++ b/_sass/modules/services.scss
@@ -31,6 +31,7 @@
 }
 .m-services-iconImage {
 	width: 170px;
+	max-width: 100%;
 }
 .m-services-description {
 	max-width: 390px;
